@@ -130,6 +130,7 @@
 #define MOD_CFG_SINGLE_SAT_SECTION "SINGLE_SAT"
 #define MOD_CFG_SINGLE_SAT_REFRESH "REFRESH"
 #define MOD_CFG_SINGLE_SAT_FIELDS  "FIELDS"
+#define MOD_CFG_SINGLE_SAT_SELECT  "SELECTED"
 
 /* event list */
 #define MOD_CFG_EVENT_LIST_SECTION  "EVENT_LIST"
