@@ -174,6 +174,7 @@ sat_cfg_int_t sat_cfg_int[SAT_CFG_INT_NUM] = {
     { "MODULES", "POLAR_INFO_COLOUR", 0x00007FFF},
     { "MODULES", "SINGLE_SAT_REFRESH", 1},
     { "MODULES", "SINGLE_SAT_FIELDS", SINGLE_SAT_FIELD_DEF},
+    { "MODULES", "SINGLE_SAT_SELECTED", 0},
     { "MODULES", "EVENT_LIST_REFRESH", 1},
     { "PREDICT", "MINIMUM_ELEV", 5},
     { "PREDICT", "NUMBER_OF_PASSES", 10},
