@@ -1,3 +1,14 @@
+2011-05-26 Charles Suprin <hamaa1vs at gmail.com>
+
+    * src/gtk-single-sat.c
+    * src/config-keys.h
+    * src/sat-cfg.c
+    * src/sat-cfg.h
+    * src/gtk-sat-module.c
+    * src/gtk-single-sat.c
+    Save selected satellite in single sat view.
+    Part of Feature Request: 3179738
+
 2011-05-14 Charles Suprin <hamaa1vs at gmail.com>
 
     * data/trsp/25338.trsp
